examples/security/role-and-rolebinding.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: student
