examples/security/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: training
  labels:
    app: training
spec:
  podSelector:
    matchLabels:
      app: training
  ingress:
  - from:
    - podSelector:
        matchLabels:
          trusted: "yes"
    ports:
    - port: 80
      protocol: TCP

# more info: https://kubernetes.io/docs/concepts/services-networking/network-policies/
